--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,13 @@ lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.04.01"
 composeNav = "2.7.7"
-kotlinxDatetime = "0.6.0"
 composeCalendar = "2.5.4"
+either = "1.0.4"
+mtrComposePaging = "1.0.2-alpha"
+room = "2.6.1"
+ksp = "1.9.10-1.0.13"
+hilt = "2.49"
+androidxHilt = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,10 +37,24 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "composeNav" }
-kotlinx-datetime = {group="org.jetbrains.kotlinx", name="kotlinx-datetime", version.ref="kotlinxDatetime"}
-compose-calendar = {group="com.kizitonwose.calendar" , name="compose", version.ref ="composeCalendar"}
+compose-calendar = { group = "com.kizitonwose.calendar", name = "compose", version.ref = "composeCalendar" }
+mantra-either = { group = "com.github.Tyzar", name = "mantra-either", version.ref = "either" }
+mantra-compose-paging = { group = "com.github.Tyzar", name = "mantra-compose-paging", version.ref = "mtrComposePaging" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-nav-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHilt" }
+androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "androidxHilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+androidx-room = { id = "androidx.room", version.ref = "room" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+dev-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
+[bundles]
+room = ["room-ktx", "room-runtime"]
+hilt = ["dagger-hilt-android", "hilt-nav-compose"]
